--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,5 +1,10 @@
-# Sample localization file for English. Add more files in this directory for other locales.
-# See https://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
-
 en:
-  hello: "Hello world"
+  activerecord:
+    attributes:
+      project:   
+        description: "Project description"
+        team: "Project team"
+        title: "Project title"
+        url: "Project URL"
+        secret: "Project password"
+        my_secret: "Password"
