Okay, force screenshot

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -7,7 +7,8 @@ en:
         title: "Project title"
         url: "Project URL"
         code_url: "Code URL"
-        github_url: "GitHub URL"
+        github_url: "GitHub URL"  
+        image: "Screenshot"          
         svn_url: "SVN URL"
         secret: "Project password"
         my_secret: "Password"
